// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "remarkOptions" option with "() => {}" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.remarkOptions should be an object:
   object { plugins?, settings?, data? }"
`;

exports[`validate options should throw an error on the "remarkOptions" option with "[]" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.remarkOptions should be an object:
   object { plugins?, settings?, data? }"
`;

exports[`validate options should throw an error on the "remarkOptions" option with "{"unknown":false}" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.remarkOptions has an unknown property 'unknown'. These properties are valid:
   object { plugins?, settings?, data? }"
`;

exports[`validate options should throw an error on the "remarkOptions" option with "test" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.remarkOptions should be an object:
   object { plugins?, settings?, data? }"
`;

exports[`validate options should throw an error on the "remarkOptions" option with "true" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.remarkOptions should be an object:
   object { plugins?, settings?, data? }"
`;

exports[`validate options should throw an error on the "removeFrontMatter" option with "() => {}" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.removeFrontMatter should be a boolean."
`;

exports[`validate options should throw an error on the "removeFrontMatter" option with "/test/" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.removeFrontMatter should be a boolean."
`;

exports[`validate options should throw an error on the "removeFrontMatter" option with "test" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.removeFrontMatter should be a boolean."
`;

exports[`validate options should throw an error on the "removeFrontMatter" option with "true" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options.removeFrontMatter should be a boolean."
`;

exports[`validate options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;

exports[`validate options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Remark Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { remarkOptions?, removeFrontMatter? }"
`;
